--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "gen-types": "npx supabase gen types typescript --linked > ./src/schema.ts"
+    "gen-types": "npx supabase gen types typescript --linked > ./lib/schema.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.20.0",
